// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExplainDialog matches snapshot on error 1`] = `
<Blueprint4.Dialog
  canOutsideClickClose={true}
  className="explain-dialog"
  isOpen={true}
  onClose={[Function]}
  title="Query plan"
>
  <div
    className="bp4-dialog-body"
  >
    <div>
      test error
    </div>
  </div>
  <div
    className="bp4-dialog-footer"
  >
    <div
      className="bp4-dialog-footer-actions"
    >
      <Blueprint4.Button
        onClick={[Function]}
        text="Close"
      />
    </div>
  </div>
</Blueprint4.Dialog>
`;

exports[`ExplainDialog matches snapshot on init 1`] = `
<Blueprint4.Dialog
  canOutsideClickClose={true}
  className="explain-dialog"
  isOpen={true}
  onClose={[Function]}
  title="Query plan"
>
  <div
    className="bp4-dialog-body"
  >
    <div />
  </div>
  <div
    className="bp4-dialog-footer"
  >
    <div
      className="bp4-dialog-footer-actions"
    >
      <Blueprint4.Button
        onClick={[Function]}
        text="Close"
      />
    </div>
  </div>
</Blueprint4.Dialog>
`;

exports[`ExplainDialog matches snapshot on loading 1`] = `
<Blueprint4.Dialog
  canOutsideClickClose={true}
  className="explain-dialog"
  isOpen={true}
  onClose={[Function]}
  title="Query plan"
>
  <div
    className="bp4-dialog-body"
  >
    <Memo(Loader) />
  </div>
  <div
    className="bp4-dialog-footer"
  >
    <div
      className="bp4-dialog-footer-actions"
    >
      <Blueprint4.Button
        onClick={[Function]}
        text="Close"
      />
    </div>
  </div>
</Blueprint4.Dialog>
`;

exports[`ExplainDialog matches snapshot on some data (many queries) 1`] = `
<Blueprint4.Dialog
  canOutsideClickClose={true}
  className="explain-dialog"
  isOpen={true}
  onClose={[Function]}
  title="Query plan"
>
  <div
    className="bp4-dialog-body"
  >
    <Blueprint4.Tabs
      animate={true}
      large={false}
      renderActiveTabPanelOnly={true}
      vertical={true}
    >
      <Blueprint4.Tab
        disabled={false}
        id={0}
        key="0"
        panel={
          <div
            className="query-explanation"
          >
            <Blueprint4.FormGroup
              className="query-group"
            >
              <ReactAce
                className="query-string"
                cursorStart={1}
                editorProps={Object {}}
                enableBasicAutocompletion={false}
                enableLiveAutocompletion={false}
                enableSnippets={false}
                focus={false}
                fontSize={13}
                height="100%"
                highlightActiveLine={true}
                maxLines={null}
                minLines={null}
                mode="hjson"
                name="ace-editor"
                navigateToFileEnd={true}
                onChange={null}
                onLoad={null}
                onPaste={null}
                onScroll={null}
                placeholder={null}
                readOnly={true}
                scrollMargin={
                  Array [
                    0,
                    0,
                    0,
                    0,
                  ]
                }
                setOptions={Object {}}
                showGutter={true}
                showPrintMargin={false}
                style={Object {}}
                tabSize={4}
                theme="solarized_dark"
                value="{
  \\"queryType\\": \\"scan\\",
  \\"dataSource\\": {
    \\"type\\": \\"table\\",
    \\"name\\": \\"wikipedia\\"
  },
  \\"intervals\\": {
    \\"type\\": \\"intervals\\",
    \\"intervals\\": [
      \\"-146136543-09-08T08:23:32.096Z/146140482-04-24T15:36:27.903Z\\"
    ]
  },
  \\"virtualColumns\\": [],
  \\"resultFormat\\": \\"compactedList\\",
  \\"batchSize\\": 20480,
  \\"limit\\": 101,
  \\"filter\\": null,
  \\"columns\\": [
    \\"channel\\"
  ],
  \\"legacy\\": false,
  \\"context\\": {},
  \\"descending\\": false,
  \\"granularity\\": {
    \\"type\\": \\"all\\"
  }
}"
                width="100%"
                wrapEnabled={false}
              />
            </Blueprint4.FormGroup>
            <Blueprint4.FormGroup
              className="signature-group"
              label="Signature"
            >
              <Blueprint4.InputGroup
                defaultValue="channel::STRING"
                readOnly={true}
              />
            </Blueprint4.FormGroup>
            <Blueprint4.Button
              className="open-query"
              intent="primary"
              minimal={true}
              onClick={[Function]}
              rightIcon="arrow-top-right"
              text="Open query"
            />
          </div>
        }
        title="Query 1"
      />
      <Blueprint4.Tab
        disabled={false}
        id={1}
        key="1"
        panel={
          <div
            className="query-explanation"
          >
            <Blueprint4.FormGroup
              className="query-group"
            >
              <ReactAce
                className="query-string"
                cursorStart={1}
                editorProps={Object {}}
                enableBasicAutocompletion={false}
                enableLiveAutocompletion={false}
                enableSnippets={false}
                focus={false}
                fontSize={13}
                height="100%"
                highlightActiveLine={true}
                maxLines={null}
                minLines={null}
                mode="hjson"
                name="ace-editor"
                navigateToFileEnd={true}
                onChange={null}
                onLoad={null}
                onPaste={null}
                onScroll={null}
                placeholder={null}
                readOnly={true}
                scrollMargin={
                  Array [
                    0,
                    0,
                    0,
                    0,
                  ]
                }
                setOptions={Object {}}
                showGutter={true}
                showPrintMargin={false}
                style={Object {}}
                tabSize={4}
                theme="solarized_dark"
                value="{
  \\"queryType\\": \\"scan\\",
  \\"dataSource\\": {
    \\"type\\": \\"table\\",
    \\"name\\": \\"wikipedia\\"
  },
  \\"intervals\\": {
    \\"type\\": \\"intervals\\",
    \\"intervals\\": [
      \\"-146136543-09-08T08:23:32.096Z/146140482-04-24T15:36:27.903Z\\"
    ]
  },
  \\"virtualColumns\\": [],
  \\"resultFormat\\": \\"compactedList\\",
  \\"batchSize\\": 20480,
  \\"limit\\": 101,
  \\"filter\\": {
    \\"type\\": \\"selector\\",
    \\"dimension\\": \\"channel\\",
    \\"value\\": \\"#en.wikipedia\\",
    \\"extractionFn\\": null
  },
  \\"columns\\": [
    \\"channel\\"
  ],
  \\"legacy\\": false,
  \\"context\\": {},
  \\"descending\\": false,
  \\"granularity\\": {
    \\"type\\": \\"all\\"
  }
}"
                width="100%"
                wrapEnabled={false}
              />
            </Blueprint4.FormGroup>
            <Blueprint4.FormGroup
              className="signature-group"
              label="Signature"
            >
              <Blueprint4.InputGroup
                defaultValue="channel::STRING"
                readOnly={true}
              />
            </Blueprint4.FormGroup>
            <Blueprint4.Button
              className="open-query"
              intent="primary"
              minimal={true}
              onClick={[Function]}
              rightIcon="arrow-top-right"
              text="Open query"
            />
          </div>
        }
        title="Query 2"
      />
      <Expander />
    </Blueprint4.Tabs>
  </div>
  <div
    className="bp4-dialog-footer"
  >
    <div
      className="bp4-dialog-footer-actions"
    >
      <Blueprint4.Button
        onClick={[Function]}
        text="Close"
      />
    </div>
  </div>
</Blueprint4.Dialog>
`;

exports[`ExplainDialog matches snapshot on some data (one query) 1`] = `
<Blueprint4.Dialog
  canOutsideClickClose={true}
  className="explain-dialog"
  isOpen={true}
  onClose={[Function]}
  title="Query plan"
>
  <div
    className="bp4-dialog-body"
  >
    <div
      className="query-explanation"
    >
      <Blueprint4.FormGroup
        className="query-group"
      >
        <ReactAce
          className="query-string"
          cursorStart={1}
          editorProps={Object {}}
          enableBasicAutocompletion={false}
          enableLiveAutocompletion={false}
          enableSnippets={false}
          focus={false}
          fontSize={13}
          height="100%"
          highlightActiveLine={true}
          maxLines={null}
          minLines={null}
          mode="hjson"
          name="ace-editor"
          navigateToFileEnd={true}
          onChange={null}
          onLoad={null}
          onPaste={null}
          onScroll={null}
          placeholder={null}
          readOnly={true}
          scrollMargin={
            Array [
              0,
              0,
              0,
              0,
            ]
          }
          setOptions={Object {}}
          showGutter={true}
          showPrintMargin={false}
          style={Object {}}
          tabSize={4}
          theme="solarized_dark"
          value="{
  \\"queryType\\": \\"topN\\",
  \\"dataSource\\": {
    \\"type\\": \\"join\\",
    \\"left\\": {
      \\"type\\": \\"table\\",
      \\"name\\": \\"wikipedia\\"
    },
    \\"right\\": {
      \\"type\\": \\"query\\",
      \\"query\\": {
        \\"queryType\\": \\"groupBy\\",
        \\"dataSource\\": {
          \\"type\\": \\"table\\",
          \\"name\\": \\"wikipedia\\"
        },
        \\"intervals\\": {
          \\"type\\": \\"intervals\\",
          \\"intervals\\": [
            \\"-146136543-09-08T08:23:32.096Z/146140482-04-24T15:36:27.903Z\\"
          ]
        },
        \\"virtualColumns\\": [],
        \\"filter\\": {
          \\"type\\": \\"selector\\",
          \\"dimension\\": \\"channel\\",
          \\"value\\": \\"#en.wikipedia\\",
          \\"extractionFn\\": null
        },
        \\"granularity\\": {
          \\"type\\": \\"all\\"
        },
        \\"dimensions\\": [
          {
            \\"type\\": \\"default\\",
            \\"dimension\\": \\"channel\\",
            \\"outputName\\": \\"d0\\",
            \\"outputType\\": \\"STRING\\"
          }
        ],
        \\"aggregations\\": [],
        \\"postAggregations\\": [],
        \\"having\\": null,
        \\"limitSpec\\": {
          \\"type\\": \\"NoopLimitSpec\\"
        },
        \\"context\\": {},
        \\"descending\\": false
      }
    },
    \\"rightPrefix\\": \\"j0.\\",
    \\"condition\\": \\"(\\\\\\"channel\\\\\\" == \\\\\\"j0.d0\\\\\\")\\",
    \\"joinType\\": \\"LEFT\\",
    \\"leftFilter\\": null
  },
  \\"virtualColumns\\": [],
  \\"dimension\\": {
    \\"type\\": \\"default\\",
    \\"dimension\\": \\"channel\\",
    \\"outputName\\": \\"d0\\",
    \\"outputType\\": \\"STRING\\"
  },
  \\"metric\\": {
    \\"type\\": \\"dimension\\",
    \\"previousStop\\": null,
    \\"ordering\\": {
      \\"type\\": \\"lexicographic\\"
    }
  },
  \\"threshold\\": 101,
  \\"intervals\\": {
    \\"type\\": \\"intervals\\",
    \\"intervals\\": [
      \\"-146136543-09-08T08:23:32.096Z/146140482-04-24T15:36:27.903Z\\"
    ]
  },
  \\"filter\\": null,
  \\"granularity\\": {
    \\"type\\": \\"all\\"
  },
  \\"aggregations\\": [
    {
      \\"type\\": \\"count\\",
      \\"name\\": \\"a0\\"
    }
  ],
  \\"postAggregations\\": [],
  \\"context\\": {},
  \\"descending\\": false
}"
          width="100%"
          wrapEnabled={false}
        />
      </Blueprint4.FormGroup>
      <Blueprint4.FormGroup
        className="signature-group"
        label="Signature"
      >
        <Blueprint4.InputGroup
          defaultValue="d0::STRING, a0::LONG"
          readOnly={true}
        />
      </Blueprint4.FormGroup>
      <Blueprint4.Button
        className="open-query"
        intent="primary"
        minimal={true}
        onClick={[Function]}
        rightIcon="arrow-top-right"
        text="Open query"
      />
    </div>
  </div>
  <div
    className="bp4-dialog-footer"
  >
    <div
      className="bp4-dialog-footer-actions"
    >
      <Blueprint4.Button
        onClick={[Function]}
        text="Close"
      />
    </div>
  </div>
</Blueprint4.Dialog>
`;
